<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenFoodFacts</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="searching">Searching...</string>
    <string name="main_intro">Find a product by barcode, name or brand.</string>
    <string name="browseProduct">Raw browsing</string>
    <string name="error_while_searching">Error while searching your product.</string>
    <string name="product_not_found">Product not found</string>
    <string name="product_characteristics">Properties</string>
    <string name="product_ingredients">Ingredients</string>
    <string name="product_nutritional_status">Nutritional status</string>
    <string name="addedbythe">Added the %1$s at %2$s by %3$s</string>
    <string name="lastmodifiedbythe">Last modified the %1$s at %2$s by %3$s</string>
    <string name="generic_name">Generic name</string>
    <string name="quantity">Quantity</string>
    <string name="packaging">Packaging</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="origins">Origins</string>
    <string name="packaging_codes">Packaging codes (EMB)</string>
    <string name="serving_size">Serving size</string>
    <string name="nutritional_composition">Nutritional composition</string>
    <string name="for_100">for 100g / 100ml</string>
    <string name="for_serving_size">For serving size</string>
    <string name="energy">Energy</string>
    <string name="protein">Protein</string>
    <string name="proteins">Proteins</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="satured_fat">Satured fat</string>
    <string name="fiber">Fiber</string>
    <string name="sodium">Sodium</string>
    <string name="salt">Salt</string>
    <string name="sugar">Sugar</string>

</resources>
